changed bootstrap global styles using paintstrap to TGA color scheme

--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -1,4 +1,5 @@
 // Bootstrap
+
 // =========
 
 // You can include less bootstrap components if you like by
@@ -7,7 +8,7 @@
 //
 // Bootstrap can be removed entirely by deleting this line.
 
-@import "bootstrap/bootstrap.less";
+@import "bootstrap-custom/bootstrap.min.css";
 
 // The easiest way to customise Bootstrap variables while
 // being able to easily override the source files with new
