--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -2,7 +2,7 @@ extends ../layouts/default
 
 block content
 	.container: .jumbotron
-		img(src='/images/logo.svg', width='160')
+		img(src='/images/Jasper and Keisha.JPG', width='160')
 		h1 Ask the Principal
 		p This is your new <a href='http://keystonejs.com', target='_blank'>KeystoneJS</a> website.
 		p It includes the latest versions of
