small style changes

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -1,5 +1,5 @@
 body {
-	background-image: url('../images/website_bg1.jpg');
+	background-image: url('../images/website_bg2.png');
 	background-repeat: no-repeat;
 }
 
