--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -19,7 +19,7 @@ html
 		//- This file provides the default styling for the KeystoneJS Content Editor
 		if user && user.canAccessKeystone
 			link(rel="stylesheet", href="/styles/site.min.css")
-			link(href="/keystone/styles/content/editor.min.css", rel="stylesheet")
+			//- link(href="/keystone/styles/content/editor.min.css", rel="stylesheet")
 
 		//- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
 		//- Safely remove this block if you are not targeting IE8
