--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -9,7 +9,7 @@ body {
 
 #footer {
 	margin-top: 30px;
-	border-top: 1px solid @gray-lighter;
+	border-top: 1px solid @gray-light;
 	padding-top: 30px;
 	color: @gray-light;
 }
