--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -18,7 +18,7 @@ html
 
 		//- This file provides the default styling for the KeystoneJS Content Editor
 		if user && user.canAccessKeystone
-			link(rel="stylesheet", href="/styles/site.min.css")
+			link(href="/styles/site.min.css", rel="stylesheet")
 			//- link(href="/keystone/styles/content/editor.min.css", rel="stylesheet")
 
 		//- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
