--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -1,16 +1,28 @@
 include ../mixins/flash-messages
 
 doctype html
-html
+html(lang="en")
 
 	//- HTML HEADER
 	head
 		meta(charset="utf-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(http-equiv="X-UA-Compatible" content="IE=edge")
-
-		title= title || 'KeystoneJS'
+		meta(name='description', content='')
+		meta(name='author', content='')
+		title Ask the Principal
 		link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
+		
+		// CSS Plugins
+		link(href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css', rel='stylesheet')
+		link(href='https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css', rel='stylesheet')
+		link(href='https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css', rel='stylesheet')
+		link(href='https://cdn.jsdelivr.net/open-iconic/1.1.0/font/css/open-iconic-bootstrap.min.css', rel='stylesheet')
+		link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css', rel='stylesheet')
+		
+		// Google Fonts
+		link(href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700', rel='stylesheet', type='text/css')
+		link(href='http://fonts.googleapis.com/css?family=Karla:400,700', rel='stylesheet', type='text/css')
 
 		//- Customise the stylesheet for your site by editing /public/styles/site.less
 		//- All .less files will be automatically compiled and minified in production.
@@ -35,36 +47,108 @@ html
 		block head
 
 	//- HTML BODY
-	body
-
-		//- HEADER
+	body(data-spy='scroll', data-target='.navbar', data-offset='71')
+			//- HEADER
 		#header: .container
-
-			//- Customise your site's navigation by changing the navLinks Array in ./routes/middleware.js
-			//- ... or completely change this header to suit your design.
-
-			div(role="navigation").navbar.navbar-default
-				.container-fluid
+		//
+			//- SIDEBAR
+			==============================
+		.sidebar
+			.sidebar__wrapper
+				.sidebar__close.js-toggle-sidebar.visible-xs
+					span.oi.oi-x
+				.sidebar__form.form_alt
+					ul.nav.navbar-nav
+						if user
+							if user.canAccessKeystone
+								li: a(href='/keystone').btn.sidebar__btn Open Admin Panel
+								br
+								li: a(href='/keystone/signout').btn.sidebar__btn Sign Out
+						else
+							li: a(href='/keystone/signin').btn.sidebar__btn Sign In
+							//- Once KeystoneJS allows for custom login and admin ui use this login
+						//- .form-group
+						//- 	label.sr-only(for='login__username') Username
+						//- 	input#login__username.form-control(type='text', placeholder='Username')
+						//- .form-group
+						//- 	label.sr-only(for='login__password') Password
+						//- 	input#login__password.form-control(type='password', placeholder='Password')
+						//- button.btn.btn-block.btn-primary(type='submit') Sign In
+				h4.sidebar__heading
+					| Links
+				ul.sidebar__menu
+					li
+						a(href='http://thegreatacademy.org/') The Great Academy
+					li
+						a(href='index_app.html') App
+					li
+						a(href='index_sign-up.html') Sign Up
+				//- h4.sidebar__heading
+				//- 	| Bonus pages
+				//- ul.sidebar__menu
+				//- 	li
+				//- 		a(href='sign-in.html') Sign In
+				//- 	li
+				//- 		a(href='sign-up.html') Sign Up
+				//- 	li
+				//- 		a(href='coming-soon.html') Coming Soon
+				.sidebar__logo
+					| Ask the Principal
+					
+			//
+				WRAPPER
+				==============================
+			.wrapper
+			//
+				NAVBAR
+				==============================
+			nav.navbar.navbar-default.navbar-fixed-top.js-navbar-top.js-toggleClass
+				.container
 					.navbar-header
-						button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+						button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
 							span.sr-only Toggle navigation
 							span.icon-bar
 							span.icon-bar
 							span.icon-bar
-						a.navbar-brand(href='/') KeystoneJS
-					.collapse.navbar-collapse
-						ul.nav.navbar-nav.navbar-left
+						a.navbar-brand(href='#home') Ask the Principal
+					#navbar.collapse.navbar-collapse
+						ul.nav.navbar-nav.navbar-right
 							each link in navLinks
 								li(class=(section == link.key ? 'active' : null)): a(href=link.href)= link.label
-						ul.nav.navbar-nav.navbar-right
-							if user
-								if user.canAccessKeystone
-									li: a(href='/keystone') Open Keystone
-								li: a(href='/keystone/signout') Sign Out
-							else
-								li: a(href='/keystone/signin') Sign In
+							li
+								a.js-toggle-sidebar(href='#')
+									span.oi.oi-menu.hidden-xs
+									span.visible-xs Login
+					// /.nav-collapse
+			//
 
-		//- BODY
+			//- Default HEADER and NAVBAR
+			//- #header: .container
+				//- Customise your site's navigation by changing the navLinks Array in ./routes/middleware.js
+				//- ... or completely change this header to suit your design.
+
+				//- div(role="navigation").navbar.navbar-default
+				//- 	.container-fluid
+				//- 		.navbar-header
+				//- 			button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+				//- 				span.sr-only Toggle navigation
+				//- 				span.icon-bar
+				//- 				span.icon-bar
+				//- 				span.icon-bar
+				//- 			a.h2(href='/') ATP
+				//- 		.collapse.navbar-collapse
+				//- 			ul.nav.navbar-nav.navbar-left
+				//- 				each link in navLinks
+				//- 					li(class=(section == link.key ? 'active' : null)): a(href=link.href)= link.label
+				//- 			ul.nav.navbar-nav.navbar-right
+				//- 				if user
+				//- 					if user.canAccessKeystone
+				//- 						li: a(href='/keystone') Open Admin
+				//- 					li: a(href='/keystone/signout') Sign Out
+				//- 				else
+				//- 					li: a(href='/keystone/signin') Sign In
+
+			//- BODY
 		#body
 
 			//- NOTE:
@@ -81,25 +165,48 @@ html
 			//- The content block should contain the body of your template's content
 			block content
 
-
-		//- FOOTER
-		.container: #footer
-
+			//
+				FOOTER
+				==============================
+			footer
+				.container
+					.row
+						.col-sm-6
+							a(href="https://github.com/Misterdjack") 
+								| © Misterdjack
+						.col-sm-6
+							.footer__social
+								a.footer-social__link.footer-social__link_twitter(href='#')
+									i.fa.fa-twitter
+								a.footer-social__link.footer-social__link_facebook(href='#')
+									i.fa.fa-facebook
+								a.footer-social__link.footer-social__link_google-plus(href='#')
+									i.fa.fa-google-plus
 			//- You don't _have_ to include a link saying your site is powered by KeystoneJS, but we appreciate it!
-			p Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.
+			//- p Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.
 
 
 		//- JAVASCRIPT
-
 		//- jQuery 1.11.1 is included by default, and required by both Bootstrap
 		//- and the KeystoneJS Content Editor. If you are not targeting IE8,
 		//- you can upgrade to 2.1.1 (also bundled) for better performance.
-		script(src='/js/lib/jquery/jquery-1.11.1.min.js')
+		script(src='/js/lib/jquery/jquery-2.1.1.min.js')
 
 		//- Customise which Bootstrap javascript files are served by including
 		//- them specifically here, instead of bootstrap-3.2.0.min.js
 		script(src='/js/lib/bootstrap/bootstrap-3.2.0.min.js')
 
+		// JS Plugins
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/1.7.2/jquery.smooth-scroll.min.js')
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.js')
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js')
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js')
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/peity/3.2.0/jquery.peity.min.js')
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js')
+		
+		// JS Custom
+		script(src='/js/lib/custom.js')
+		
 		//- The KeystoneJS Content Editor provides support for ks-editable data attributes,
 		//- which generate links to edit content for users who can access Keystone
 		if user && user.canAccessKeystone
