--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -4,11 +4,7 @@ block content
 	.container: .jumbotron
 		img(src='/images/Jasper and Keisha.JPG', width='160')
 		h1 Ask the Principal
-		p This is your new <a href='http://keystonejs.com', target='_blank'>KeystoneJS</a> website.
-		p It includes the latest versions of
-			| <a href='http://getbootstrap.com/' target='_blank'>Bootstrap</a>
-			| and <a href='http://www.jquery.com/' target='_blank'>jQuery</a>.
-		p Visit the <a href='http://keystonejs.com/guide' target='_blank'>Getting Started</a> guide to learn how to customise it.
+		p What's on you mind?
 		hr
 		if user && user.canAccessKeystone
 			p
@@ -19,5 +15,3 @@ block content
 				a(href='/keystone/signin', style='margin-right: 10px').btn.btn-lg.btn-primary Sign in
 				|  to use the Admin UI.
 		hr
-		p Remember to <a href='https://github.com/JedWatson/keystone' target='_blank'>Star KeystoneJS on GitHub</a> and
-			| <a href='https://twitter.com/keystonejs' target='_blank'>follow @keystonejs</a> on twitter for updates.
