--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -51,7 +51,7 @@ html(lang="en")
 							span.icon-bar
 							span.icon-bar
 							span.icon-bar
-						a.navbar-brand(href='/') KeystoneJS
+						a.navbar-brand(href='/') Ask the Principal
 					.collapse.navbar-collapse
 						ul.nav.navbar-nav.navbar-left
 							each link in navLinks
@@ -59,7 +59,7 @@ html(lang="en")
 						ul.nav.navbar-nav.navbar-right
 							if user
 								if user.canAccessKeystone
-									li: a(href='/keystone') Open Keystone
+									li: a(href='/keystone') Open Admin Panel
 								li: a(href='/keystone/signout') Sign Out
 							else
 								li: a(href='/keystone/signin') Sign In
