--- a/templates/views/contact.jade
+++ b/templates/views/contact.jade
@@ -22,13 +22,13 @@ block content
 						label Phone
 						input(type='text', name='phone', value=formData.phone, placeholder='(optional)').form-control
 					.form-group(class=validationErrors.enquiryType ? 'has-error' : null)
-						label What would you like to ask the Principal?
+						label Enquiry Type
 						select(name='enquiryType').form-control
 							option(value='') (select one)
 							each type in enquiryTypes
 								option(value=type.value, selected=formData.enquiryType == type.value)= type.label
 					.form-group(class=validationErrors.message ? 'has-error' : null)
-						label Message
+						label What would you like to ask the Principal?
 						textarea(name='message', placeholder='Leave us a message...' rows=4).form-control= formData.message
 					.form-actions
 						button(type='submit').btn.btn-primary Send
