--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -2,16 +2,19 @@ extends ../layouts/default
 
 block content
 	.container: .jumbotron
-		img(src='/images/Jasper and Keisha.JPG', width='160')
-		h1 Ask the Principal
-		p What's on you mind?
-		hr
-		if user && user.canAccessKeystone
-			p
-				a(href='/keystone/signin').btn.btn-lg.btn-primary Open the Admin UI
-		else
-			p We have created a default Admin user for you with the email <strong>user@keystonejs.com</strong> and the password <strong>admin</strong>.
-			p
-				a(href='/keystone/signin', style='margin-right: 10px').btn.btn-lg.btn-primary Sign in
-				|  to use the Admin UI.
-		hr
+		.row
+			.col-sm-6.text-center
+				img(src='/images/Jasper and Keisha.JPG' width='300px')
+			.col-sm-6.text-center
+				h1 Ask the Principal
+				a(href="/contact") What's on your mind? 
+				hr
+				if user && user.canAccessKeystone
+					p
+						a(href='/keystone/signin').btn.btn-lg.btn-primary Open the Admin Panel
+				else
+					p We have created a default Admin user for you with the email <strong>user@keystonejs.com</strong> and the password <strong>admin</strong>.
+					p
+						a(href='/keystone/signin', style='margin-right: 10px').btn.btn-lg.btn-primary Sign in
+						|  to use the Admin Panel.
+				hr
