--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -1,11 +1,11 @@
 extends ../layouts/default
 
 block content
-	.container: .jumbotron
+	.container-fluid: .jumbotron
 		.row
-			.col-sm-6.text-center
-				img(src='/images/Jasper and Keisha.JPG' width='300px')
-			.col-sm-6.text-center
+			.col-md-6.text-center
+				img(src='/images/Jasper and Keisha.JPG' width='450px')
+			.col-md-6.text-center
 				h1 Ask the Principal
 				a(href="/contact") What's on your mind? 
 				hr
