--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -5,14 +5,18 @@ body {
 
 #header {
 	margin-top: 30px;
+	width: 100%;
 }
 
-#footer {
-	margin-top: 30px;
-	border-top: 1px solid @gray-light;
-	padding-top: 30px;
-	color: @gray-light;
+#body {
+	width: 100%;
 }
+
+// Optional
+// .container-fluid {
+// 	margin: 0px;
+// 	padding: 0px;
+// }
 
 .gallery-image img{
     display: block;
@@ -44,9 +48,9 @@ body {
 .navbar__separator {
   border-left: 1px solid #6c5b7b;
   height: 23px;
-  -webkit-transition: border-color 0.3s;
-  -o-transition: border-color 0.3s;
-  transition: border-color 0.3s;
+  -webkit-transition: border-color 0.5s;
+  -o-transition: border-color 0.5s;
+  transition: border-color 0.5s;
 }
 .navbar-inverse .navbar__separator {
   border-color: #eee;
@@ -55,19 +59,19 @@ body {
  * Sidebar
  */
 .wrapper {
-  box-shadow: 10px 0 10px rgba(0, 0, 0, 0.2);
-  -webkit-transition: margin 0.3s;
-  -o-transition: margin 0.3s;
-  transition: margin 0.3s;
+  box-shadow: 10px 0 10px rgba(0, 0, 0, 0);
+  -webkit-transition: margin 0.5s;
+  -o-transition: margin 0.5s;
+  transition: margin 0.5s;
 }
 .js-wrapper-aside {
   margin-left: -220px;
   margin-right: 220px;
 }
 .navbar {
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
 }
 .js-navbar-aside {
   left: -220px;
@@ -89,9 +93,9 @@ body {
   background-image: linear-gradient(to bottom, #325776 0%, #355c7d 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff325776', endColorstr='#ff355c7d', GradientType=0);
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
 }
 .js-sidebar-aside {
   right: 0;
@@ -176,4 +180,57 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+// Footer
+#footer {
+	margin-top: 30px;
+	border-top: 1px solid @gray-light;
+	padding-top: 30px;
+	color: @gray-light;
+	// background-color: #eee;
+	line-height: 30px;
+	text-align: center;
+	width: 100%;
+}
+
+footer a {
+  color: #9a9a9a;
+}
+.footer__social {
+  margin-top: 20px;
+}
+.footer-social__link {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border-radius: 3px;
+  background-color: #bbb;
+  text-align: center;
+  color: #eee;
+  -webkit-transition: all 0.15s;
+  -o-transition: all 0.15s;
+  transition: all 0.15s;
+}
+.footer-social__link:hover,
+.footer-social__link:focus {
+  color: white;
+}
+.footer-social__link_twitter:hover {
+  background-color: #55acee;
+}
+.footer-social__link_facebook:hover {
+  background-color: #3b5998;
+}
+.footer-social__link_google-plus:hover {
+  background-color: #dd4b39;
+}
+@media (min-width: 768px) {
+  footer {
+    text-align: left;
+  }
+  .footer__social {
+    margin-top: 0;
+    text-align: right;
+  }
 }
