--- a/templates/mixins/flash-messages.jade
+++ b/templates/mixins/flash-messages.jade
@@ -1,6 +1,6 @@
 mixin flash-messages(messages)
 	if messages
-		#flash-messages.container
+		#flash-messages.container-fluid
 			each message in messages.info
 				+flash-message(message, 'info')
 			each message in messages.success
