--- a/templates/views/errors/500.jade
+++ b/templates/views/errors/500.jade
@@ -1,6 +1,6 @@
 extends ../../layouts/default
 
 block content
-	.container
+	.container-fluid
 		h1 Error (500)
 		p.lead Sorry, the site has encountered an error.
