some final merge conflicts

--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -11,7 +11,7 @@ html(lang="en")
 		meta(name='description', content='')
 		meta(name='author', content='')
 		title Ask the Principal
-		link(rel="shortcut icon", href="/favicon-tga.ico", type="image/x-icon")
+		link(rel="shortcut icon", href="/images/favicon-tga.ico", type="image/x-icon")
 		
 		// CSS Plugins
 		link(href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css', rel='stylesheet')
