--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -21,8 +21,8 @@ html(lang="en")
 		link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css', rel='stylesheet')
 		
 		// Google Fonts
-		link(href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700', rel='stylesheet', type='text/css')
-		link(href='http://fonts.googleapis.com/css?family=Karla:400,700', rel='stylesheet', type='text/css')
+		link(href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700', rel='stylesheet', type='text/css')
+		link(href='https://fonts.googleapis.com/css?family=Karla:400,700', rel='stylesheet', type='text/css')
 
 		//- Customise the stylesheet for your site by editing /public/styles/site.less
 		//- All .less files will be automatically compiled and minified in production.
