some small style changes

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -17,6 +17,10 @@ body {
 // 	margin: 0px;
 // 	padding: 0px;
 // }
+.index-bg {
+	background-image: url('../images/website_bg1.jpg');
+	background-repeat: no-repeat;
+}
 
 .gallery-image img{
     display: block;
