--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -4,7 +4,7 @@ body {
 }
 
 #header {
-	margin-top: 30px;
+	margin-top: 50px;
 	width: 100%;
 }
 
@@ -13,10 +13,11 @@ body {
 }
 
 // Optional
-// .container-fluid {
-// 	margin: 0px;
-// 	padding: 0px;
-// }
+.container-fluid {
+	margin: 0px;
+	padding: 0px;
+}
+//
 .index-bg {
 	background-image: url('../images/website_bg1.jpg');
 	background-repeat: no-repeat;
@@ -80,6 +81,9 @@ body {
 .js-navbar-aside {
   left: -220px;
   right: 220px;
+}
+.sidebar-toggle{
+	padding-right: 10px;
 }
 /**
  * Sidebar general
