--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -1,20 +1,40 @@
 extends ../layouts/default
 
 block content
+	.container-fluid: .hero.hero_agency
+		.container
+			.row
+				.col-xs-12
+					// Hero heading
+					h1.heading.hero__heading.animated.fadeInUp.delay_20 Ask The Principal - An open conversation on education
+					// Hero subheading
+					p.heading__sub.hero-heading__sub.animated.fadeInUp.delay_40
+						| Ask The Principal is a radio show dedicated to opening a dialogue on all aspects of modern education.  
+						br
+						|	We will discuss all the mercurial challenges of education, and the best tools to address them, including the Personalized and Blended Learning models.
+					// Hero buttons
+					//- a.hero__btn.btn.btn-lg.btn-primary.animated.fadeInUp.delay_2(href='#') Primary action
+					//- a.hero__btn.btn.btn-lg.btn-link.animated.fadeInUp.delay_2(href='#about') Find out more
 	.container-fluid: .jumbotron.index-bg
 		.row
-			.col-sm-6.text-center
-				img(src='/images/Jasper and Keisha.JPG').img-responsive
-			.col-sm-6.text-center
-				h1 Ask the Principal
-				a(href="/contact").h3 What's on your mind? 
-				hr
-				if user && user.canAccessKeystone
-					p
-						a(href='/keystone/signin').btn.btn-lg.btn-primary Open the Admin Panel
-				else
-					p We have created a default Admin user for you with the email <strong>user@keystonejs.com</strong> and the password <strong>admin</strong>.
-					p
-						a(href='/keystone/signin', style='margin-right: 10px').btn.btn-lg.btn-primary Sign in
-						|  to use the Admin Panel.
-				hr
+			.row-same-height
+				.col-sm-6.text-center.col-sm-height.col-middle
+					img(src='/images/Jasper and Keisha.JPG').img-responsive
+				.col-sm-6.text-center.col-sm-height.col-middle
+					h3.heading.heading_left 
+						strong Ask The Principal
+					p.heading__sub
+						strong We want to hear from you! Any pressing topics that you would like the principal to discuss on the air are fair game.
+					a.btn.btn-lg.btn-primary(href='/contact') Tell us what's on your mind?
+					br
+					br
+					hr
+					if user && user.canAccessKeystone
+						p
+							a(href='/keystone/signin').btn.btn-default Open the Admin Panel
+					else
+						p The default Admin user email is <strong>user@keystonejs.com</strong> and the password is <strong>admin</strong>.
+						p
+							a(href='/keystone/signin', style='margin-right: 10px').btn.btn-lg.btn-primary Sign in
+							|  to use the Admin Panel.
+					hr
