changed the gallery logic

--- a/templates/views/gallery.jade
+++ b/templates/views/gallery.jade
@@ -5,21 +5,41 @@ block intro
 		h1 Gallery
 	
 block content
-	.container-fluid
+	.container-fluid: #portfolio.section
 		if galleries.length
 			each gallery in galleries
-				h2= gallery.name
-					if gallery.publishedDate
-						.pull-right.text-muted= gallery._.publishedDate.format('Do MMM YYYY')
-				
-				.row.gallery-images
-					if gallery.heroImage.exists
-						.col-sm-4.col-md-4.gallery-image: img(src=gallery._.heroImage.limit(680,680)).img-rounded
-						.col-sm-8.col-md-8: .row
-							each image in gallery.images
-								.col-xs-4.col-sm-4.col-md-3.gallery-image: img(src=image.limit(300,300)).img-rounded
-					else
-						each image in gallery.images
-							.col-xs-6.col-sm-4.col-md-3.gallery-image: img(src=image.limit(300,300)).img-rounded
+				.container
+					.row
+						.col-xs-12
+							h4.heading= gallery.name
+								if gallery.publishedDate
+									.pull-right.text-muted= gallery._.publishedDate.format('Do MMM YYYY')
+				.portfolio__items
+					.col-xs-6.col-sm-4.col-md-3
+						.portfolio__item
+							.portfolio-item__img
+								if gallery.heroImage.exists
+									.col-sm-4.col-md-4.gallery-image: img(src=gallery._.heroImage.limit(680,680)).img-rounded
+									.col-sm-8.col-md-8: .row
+										each image in gallery.images
+											a(href=image.limit(300,300), data-lightbox='portfolio')
+												img(src=image.limit(300,300)).img-responsive
+												.portfolio-item__mask
+													.portfolio-item-mask__content
+														.portfolio-item-mask__title
+															| Click to see larger image
+														//- .portfolio-item-mask__summary
+														//- 	| Pellentesque metus arcu, placerat nec porta in, ultricies id enim. Nullam sit amet viverra sapien, quis aliquet quam.
+								else
+									each image in gallery.images
+										a(href=image.limit(300,300), data-lightbox='portfolio')
+											img(src=image.limit(300,300)).img-responsive
+											.portfolio-item__mask
+												.portfolio-item-mask__content
+													.portfolio-item-mask__title
+														| Click to see larger image
+													//- .portfolio-item-mask__summary
+													//- 	| Pellentesque metus arcu, placerat nec porta in, ultricies id enim. Nullam sit amet viverra sapien, quis aliquet quam.
+					.clearfix
 		else
 			h3.text-muted There are no image galleries yet.
