--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -237,6 +237,137 @@ body {
   text-align: center;
 }
 
+/**
+ * Portfolio Section
+ */
+.portfolio__items {
+  margin-bottom: 40px;
+}
+.portfolio__items > div {
+  padding-right: 2.5px;
+  padding-left: 2.5px;
+}
+.portfolio__item {
+  margin-bottom: 5px;
+}
+.portfolio-item__img {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+.portfolio-item__img:hover .portfolio-item__mask {
+  background: rgba(255, 255, 255, 0.9);
+}
+.portfolio-item__img:hover .portfolio-item-mask__content {
+  top: 0;
+}
+.portfolio-item__mask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0);
+  -webkit-transition: background 0.5s;
+  -o-transition: background 0.5s;
+  transition: background 0.5s;
+}
+@media (max-width: 767px) {
+  .portfolio-item__mask {
+    visibility: hidden;
+  }
+}
+.portfolio-item-mask__content {
+  position: absolute;
+  display: block;
+  top: -100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 40px 20px;
+  overflow: hidden;
+  color: #565656;
+  text-decoration: none;
+  -webkit-transition: top 0.5s;
+  -o-transition: top 0.5s;
+  transition: top 0.5s;
+}
+.portfolio-item-mask__title {
+  margin-bottom: 20px;
+  font-weight: 600;
+}
+.portfolio-item-mask__summary {
+  font-size: 12px;
+}
+/* Lightbox controls */
+/* General */
+.lightboxOverlay {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.lb-outerContainer {
+  border-radius: 0;
+}
+/* Loading */
+.lb-cancel {
+  background: url(../img/loading.gif) no-repeat;
+}
+/* Previous & next slides */
+.lb-nav a.lb-prev,
+.lb-nav a.lb-next {
+  position: relative;
+  width: 10%;
+  background: none;
+  color: white;
+}
+.lb-nav a.lb-prev:hover,
+.lb-nav a.lb-next:hover,
+.lb-nav a.lb-prev:focus,
+.lb-nav a.lb-next:focus {
+  text-decoration: none;
+}
+.lb-nav a.lb-prev::before,
+.lb-nav a.lb-next::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -12px;
+  margin-left: -12px;
+  font-family: "Icons";
+  font-size: 24px;
+}
+.lb-nav a.lb-prev::before {
+  content: "\e035";
+}
+.lb-nav a.lb-next::before {
+  content: "\e036";
+}
+/* Close */
+.lb-data .lb-close {
+  position: relative;
+  background: none;
+  color: white;
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transition: none;
+  -o-transition: none;
+  transition: none;
+}
+.lb-data .lb-close:hover,
+.lb-data .lb-close:focus {
+  text-decoration: none;
+}
+.lb-data .lb-close::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -7.5px;
+  margin-left: -7.5px;
+  content: "\e0db";
+  font-family: "Icons";
+}
+
 // Footer
 #footer {
 	margin-top: 30px;
