--- a/templates/views/gallery.jade
+++ b/templates/views/gallery.jade
@@ -20,9 +20,9 @@ block content
 							.portfolio-item__img
 								if gallery.heroImage.exists
 									.col-sm-4.col-md-4.gallery-image: img(src=gallery._.heroImage.limit(680,680)).img-rounded
-									.row: .col-sm-8.col-md-8
+									.row
 										each image in gallery.images
-											a(href=image.limit(500,500), data-lightbox='portfolio')
+											a(href=image.limit(500,500), data-lightbox='portfolio'): .col-sm-8.col-md-8
 												img(src=image.limit(500,500)).img-responsive
 												.portfolio-item__mask
 													.portfolio-item-mask__content
