--- a/templates/views/blog.jade
+++ b/templates/views/blog.jade
@@ -24,7 +24,7 @@ mixin post(post)
 
 block intro
 	.container-fluid
-		h1= data.category ? data.category.name : 'Blog'
+		h1= data.category ? data.category.name : 'Posts'
 
 block content
 	.container-fluid: .row
