--- a/templates/views/blog.jade
+++ b/templates/views/blog.jade
@@ -23,11 +23,11 @@ mixin post(post)
 			p.read-more: a(href='/blog/post/' + post.slug) Read more...
 
 block intro
-	.container-fluid
+	.container
 		h1= data.category ? data.category.name : 'Posts'
 
 block content
-	.container-fluid: .row
+	.container: .row
 		.col-sm-8.col-md-9
 			if filters.category && !data.category
 				h3.text-muted Invalid Category.
