--- a/templates/views/contact.jade
+++ b/templates/views/contact.jade
@@ -1,11 +1,11 @@
 extends ../layouts/default
 
 block intro
-	.container-fluid
+	.container
 		h1 Ask the Principal a question
 		
 block content
-	.container-fluid
+	.container
 		if enquirySubmitted
 			h3 Thanks for getting in touch.
 		else
