--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -32,6 +32,7 @@ body {
 /**
  * Navbar general
  */
+
 .navbar {
   border-bottom: 0;
 }
@@ -189,6 +190,25 @@ body {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+/* Same height columns */
+.row-same-height {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
+.col-sm-height {
+	max-height: 550px;
+}
+@media (min-width: 768px) {
+  .col-sm-height {
+		max-height: 550px;
+  }
+}
+.col-middle {
+	display: inline-block;
+	vertical-align: middle;
+	float: none;
+}
 // Hero
 // /**
  // * Hero
@@ -201,19 +221,19 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.hero::before {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-image: -webkit-linear-gradient(top, rgba(108, 91, 123, 0.8) 0%, rgba(53, 92, 125, 0.8) 100%);
-  background-image: -o-linear-gradient(top, rgba(108, 91, 123, 0.8) 0%, rgba(53, 92, 125, 0.8) 100%);
-  background-image: linear-gradient(to bottom, rgba(108, 91, 123, 0.8) 0%, rgba(53, 92, 125, 0.8) 100%);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cc6c5b7b', endColorstr='#cc355c7d', GradientType=0);
-  content: "";
-}
+// .hero::before {
+//   position: absolute;
+//   left: 0;
+//   top: 0;
+//   width: 100%;
+//   height: 100%;
+//   background-image: -webkit-linear-gradient(top, rgba(108, 91, 123, 0.8) 0%, rgba(53, 92, 125, 0.8) 100%);
+//   background-image: -o-linear-gradient(top, rgba(108, 91, 123, 0.8) 0%, rgba(53, 92, 125, 0.8) 100%);
+//   background-image: linear-gradient(to bottom, rgba(108, 91, 123, 0.8) 0%, rgba(53, 92, 125, 0.8) 100%);
+//   background-repeat: repeat-x;
+//   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cc6c5b7b', endColorstr='#cc355c7d', GradientType=0);
+//   content: "";
+// }
 @media (min-width: 768px) {
   .hero {
     padding: 220px 0 150px;
@@ -233,9 +253,14 @@ body {
 }
 /* Hero :: Agency */
 .hero_agency {
-  background-image: url(../images/school-overview.jpg);
-  text-align: center;
+  // background-image: url(../images/tga_header_small.jpg);
+	background-repeat: no-repeat;
+	text-align: center;
 }
+// .row.limit [class*="col-"]{
+//   max-height:300px;
+//   overflow:hidden;
+// }
 
 /**
  * Portfolio Section
@@ -420,3 +445,5 @@ footer a {
     text-align: right;
   }
 }
+
+ @grid-float-breakpoint:     950px;
