--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -8,7 +8,7 @@
 //
 // Bootstrap can be removed entirely by deleting this line.
 
-@import "bootstrap-custom/bootstrap.min.css";
+@import "bootstrap/bootstrap.less";
 
 // The easiest way to customise Bootstrap variables while
 // being able to easily override the source files with new
@@ -16,7 +16,6 @@
 //
 // You can also add your own custom variables to this file for
 // use in your site stylesheets.
-@grid-float-breakpoint:     950px;
 
 @import "site/variables.less";
 
