changed hero banner

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -2,7 +2,9 @@ extends ../layouts/default
 
 block content
 	.container-fluid: .container-fluid
-		img(src="../images/tga_header_large.png", alt="The Great Academy").img-responsive
+		img(src="../images/tga_header_large.png", alt="The Great Academy").img-responsive.visible-sm.visible-xs
+		img(src='/images/stretch-bg.png').center-block.col-sm-height.img-responsive.visible-md.visible-lg
+
 		//- .container
 		//- 	.row
 		//- 		.col-xs-12
