--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -216,6 +216,12 @@ body {
 	vertical-align: middle;
 	float: none;
 }
+// Heading
+.heading__sub {
+  text-align: center;
+	font-weight: 600;
+}
+
 // Hero
 // /**
  // * Hero
@@ -454,4 +460,11 @@ footer a {
     margin-top: 0;
     text-align: right;
   }
+}
+
+@media (max-width: @screen-sm-max) {
+	#footer {
+		background-color: #fff;
+
+	}
 }
