fine tuned less base styles and responsiveness

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -255,15 +255,9 @@ body {
 //     padding: 220px 0 150px;
 //   }
 // }
-// .hero__heading {
-//   margin-top: 0;
-//   font-size: 40px;
-//   color: white;
-// }
-// .hero__heading + .hero-heading__sub {
-//   color: rgba(255, 255, 255, 0.9);
-// 	font-size: 20px;
-// }
+.hero__heading {
+	font-size: 67px;
+}
 // .hero__btn.btn-link {
 //   color: rgba(255, 255, 255, 0.9);
 // }
@@ -408,6 +402,9 @@ body {
   content: "\e0db";
   font-family: "Icons";
 }
+.lego{
+	height: 100px;
+}
 
 // Footer
 #footer {
@@ -462,9 +459,14 @@ footer a {
   }
 }
 
-@media (max-width: @screen-sm-max) {
+@media (max-width: @screen-xs-max) {
 	#footer {
 		background-color: #fff;
-
 	}
+
+	// .index-bg {
+	// 	background-image: none;
+	// 	background-color: #838383;
+	// }
+
 }
