--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -100,7 +100,7 @@ html(lang="en")
 							li
 								a(href='http://thegreatacademy.org/foundation/' target='_blank') TGA Foundation
 							li 
-								a(href='http://player.listenlive.co/22401' target='_blank') The Great Academy
+								a(href='http://thegreatacademy.org/' target='_blank') The Great Academy
 							li 
 								a(href="http://thegreatacademy.org/teachers/family-resources-2/available-scholarships/" target="_blank") Sponsorship
 							li
@@ -142,6 +142,7 @@ html(lang="en")
 									i.fa.fa-twitter
 								a.footer-social__link.footer-social__link_facebook(href='https://www.facebook.com/thegreatacademy/')
 									i.fa.fa-facebook
+					br
 									
 			//- You don't _have_ to include a link saying your site is powered by KeystoneJS, but we appreciate it!
 			//- p Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.
