--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -40,7 +40,7 @@ block content
 							| Listen to our podcasts at:
 							.row
 								.col-sm-6.col-sm-offset-3
-									a(href="http://www.770kkob.com/podcasts/") 
+									a(href="http://www.770kkob.com/podcasts/" target="_blank") 
 										img(src="/images/770kob.png", alt="770 KKOB-AM").img-responsive.btn-block
 						hr
 						p.heading__sub.question-mark 
@@ -70,4 +70,4 @@ block content
 			.col-xs-6
 				.row
 					.col-xs-4.pull-right
-						img(src="/images/lego.png", alt='Lego Construction Man from Lego Movie', data-toggle='tooltip', data-placement='bottom', title='SITE UNDER CONSTRUCTION. Check back soon for new features!').lego
+						img(src="/images/lego.png", alt='Lego Construction Man from Lego Movie', data-toggle='tooltip', data-placement='top', title='SITE UNDER CONSTRUCTION. Check back soon for new features!').lego
