--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -21,8 +21,7 @@ html(lang="en")
 		link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css', rel='stylesheet')
 		
 		// Google Fonts
-		link(href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700', rel='stylesheet', type='text/css')
-		link(href='https://fonts.googleapis.com/css?family=Karla:400,700', rel='stylesheet', type='text/css')
+		link(href='https://fonts.googleapis.com/css?family=Roboto:500,400|Playfair+Display:400,700|PT+Serif:400,700', rel='stylesheet', type='text/css')
 
 		//- Customise the stylesheet for your site by editing /public/styles/site.less
 		//- All .less files will be automatically compiled and minified in production.
@@ -100,7 +99,7 @@ html(lang="en")
 							li
 								a(href='http://thegreatacademy.org/foundation/' target='_blank') TGA Foundation
 							li 
-								a(href='http://thegreatacademy.org/' target='_blank') The Great Academy
+								a(href='http://thegreatacademy.org/' target='_blank') The GREAT Academy
 							li 
 								a(href="http://thegreatacademy.org/teachers/family-resources-2/available-scholarships/" target="_blank") Sponsorship
 							li
@@ -132,15 +131,15 @@ html(lang="en")
 				.container
 					.row
 						.col-xs-12.col-sm-4.col-middle
-							| © The Great Academy
+							| © The GREAT Academy
 						.col-xs-12.col-sm-4.col-middle
 							a(href="http://thegreatacademy.org/foundation/" target="_blank") 
 								img(src="../images/tga_logo_footer.png", alt="The Great Academy Seal").center-block.img-responsive
 						.col-xs-12.col-sm-4.col-middle
 							.footer__social Connect with us:  
-								a.footer-social__link.footer-social__link_twitter(href='https://twitter.com/TheGREATAcademy')
+								a.footer-social__link.footer-social__link_twitter(href='https://twitter.com/TheGREATAcademy' target="_blank")
 									i.fa.fa-twitter
-								a.footer-social__link.footer-social__link_facebook(href='https://www.facebook.com/thegreatacademy/')
+								a.footer-social__link.footer-social__link_facebook(href='https://www.facebook.com/thegreatacademy/' target="_blank")
 									i.fa.fa-facebook
 					br
 									
