small changes as per e-mail

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -30,9 +30,9 @@ block content
 						p.heading__sub.animated.fadeInUp.delay_40
 							| Hosted by
 							br
-							strong Jasper & Keisha Mathews
+							strong Jasper & Keisha Matthews
 							br
-							| 2nd + 4th Saturdays
+							| 2nd & 4th Saturdays
 							br
 							| Noon - 1:00 pm on 770 KKOB AM				
 						hr
