changed container-fluid hierarchy to fix formatting issue

--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -108,7 +108,7 @@ html(lang="en")
 									span.visible-xs.visible-sm Login
 
 			//- BODY
-		#body: .wrapper
+		#body: .container-fluid: .wrapper
 
 			//- NOTE:
 			//- There is no .container wrapping class around body blocks to allow more flexibility in design.
